refactor(tests) Se actualizaron y añadieron más tests para mejorar la cobertura